--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is SIH Project against problem statment given by DRDO",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,21 @@
   "bugs": {
     "url": "https://github.com/hritikkhurana10sm/sih/issues"
   },
-  "homepage": "https://github.com/hritikkhurana10sm/sih#readme"
+  "homepage": "https://github.com/hritikkhurana10sm/sih#readme",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.0",
+    "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-jwt-strategy": "^1.1.6",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
+    "path": "^0.12.7"
+  }
 }
